deploy/webapp/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: sandbox
  name: todolistweb
  labels:
    app: todolistweb
spec:
  type: ClusterIP 
  selector:
    app: todolistweb
  ports:
  - name: web
    port: 8080
    targetPort: 47818
